# ObliviousOTA

./: .gitignore  LICENSE  README.md  Workspace.code-workspace  proof.spthy
Data/: 100NonTLSExecutions.csv  100TLSExecutions.csv  BlindFetchTiming.csv  Header.csv  MergedExecutions.csv  MergedExecutionsPrev.csv  NonTLSExecutions.csv  OrderedCloseEarlyMemoryTrace.csv  OrderedExecutionsCloseEarlyBBT01.csv  OrderedExecutionsCloseEarlyLB01.csv  OrderedExecutionsCloseEarlyPSC01.csv  OrderedExecutionsCloseEarlySLM01.csv  OrderedExecutionsFixedBudgetBBT01.csv  OrderedExecutionsFixedBudgetLB01.csv  OrderedExecutionsFixedBudgetPSC01.csv  OrderedExecutionsFixedBudgetSLM01.csv  OrderedFixedBudgetMemoryTrace.csv  OrderedSlotHeatmap.csv  PlainExecutions.csv  PlainHeader.csv  PlainTiming.csv  TLSExecutions.csv  UnorderedCloseEarlyMemoryTrace.csv  UnorderedExecutionsCloseEarlyBBT01.csv  UnorderedExecutionsCloseEarlyLB01.csv  UnorderedExecutionsCloseEarlyPSC01.csv  UnorderedExecutionsCloseEarlySLM01.csv  UnorderedExecutionsFixedBudgetBBT01.csv  UnorderedExecutionsFixedBudgetLB01.csv  UnorderedExecutionsFixedBudgetPSC01.csv  UnorderedExecutionsFixedBudgetSLM01.csv  UnorderedFixedBudgetMemoryTrace.csv  UnorderedSlotHeatmap.csv
Firmware/: .gitignore  CMakeLists.txt  README.md  environment.py  partitions.csv  platformio.ini  regex.txt  sdkconfig-overrides  sdkconfig.esp32dev
Firmware/components/libopaque/: .component_hash  opaque.c
Firmware/components/noise_xk/: cmakelists.txt
Firmware/lib/OPAQUE/: NetworkedOPAQUE.c  NetworkedOPAQUE.h  OPAQUEWrapper.c  OPAQUEWrapper.h
Firmware/lib/SSOT/: ssot.c  ssot.h
Firmware/lib/net/: HTTP.c  HTTP.h  NetUtils.c  NetUtils.h
Firmware/src/: BlindFetch.c  BlindFetch.h  CMakeLists.txt  idf_component.yml  main.c
Helper/: Helper.slnx  Program.cs  timingGraph.py
Interop/: CMakeLists.txt  Interop.c  Interop.h  OPRFInterop.c  OPRFInterop.h  OpaqueInterop.c  OpaqueInterop.h  README.md
Interop/lib/karmel/: cmakelists.txt
Interop/lib/libopaque/: cmakelists.txt  common.c
Interop/lib/liboprf/: cmakelists.txt
Interop/lib/liboprf/oprf/: .component_hash
OpaqueInterop/: OpaqueInterop.sln  OpaqueInterop.vcxproj  OpaqueInterop.vcxproj.filters  dllmain.cpp  hello.c  hello.h
Proofs/: proof.spthy
Scripts/: IQR.py  auroc.py  heatmaps.py  memory.py  regressor.py  timing.py
Server/: .dockerignore  34987A914658.opqr  Program.cs  Server.csproj  docker-compose.yml  dockerfile  oprfseed
Server/Extensions/: IntPtrExtensions.cs
Server/Interop/: Interop.cs  InteropWrappers.cs  OPAQUE.cs
Server/Models/Request/: KTVRequest.cs  LogRequest.cs  LoginRequest.cs  LoginVerifyRequest.cs  RegisterFinalizeRequest.cs  RegisterRequest.cs  SelectRequest.cs
Server/Properties/: launchSettings.json
(+1 files in other folders)
